# restaurant_club_bot

./: LICENSE  README.md
bot/: .env.sample  .gitignore  makefile  pyproject.toml
bot/src/: local.py
bot/src/restaurant_club_bot/: lambda.py  lambda_entry.py
bot/src/restaurant_club_bot/handler/: interaction_handler.py
bot/src/restaurant_club_bot/interaction/: interaction_handler.py
bot/src/restaurant_club_bot/interaction/model/: response.py
bot/src/restaurant_club_bot/model/: url_invocation.py
bot/test/restaurant_club_bot/model/: test_url_invocation.py
cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
cdk/lib/: app.ts  botStack.ts  constants.ts
